fix width on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,5 +19,4 @@ $gray: #222;
   font-size: large;
   margin: 0 auto;
   max-width: 600px;
-  width: 600px;
 }
